Fix spacing issue on interior pages

--- a/source/stylesheets/pages/_interior.scss
+++ b/source/stylesheets/pages/_interior.scss
@@ -18,8 +18,8 @@ body.interior {
   .main-content {
     @extend %container;
     padding-bottom: calc-em(72px);
-    &:last-of-type {
-      padding-bottom: calc-em(72px);
-    }
+  }
+  .site-footer {
+    margin-top: calc-em(72px);
   }
 }
